ghc-4335c07/testsuite/tests/parser/should_fail/T10498b.stderr

T10498b.hs:7:8: error: parse error on input ‘module’
